<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.view.AddNewIssueDescriptionFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_issue_description_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_marginBottom="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_issue_issue_name_label"
        app:helperTextEnabled="true"
        app:helperText="@string/add_new_issue_issue_name_helper_text"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="64"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issue_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_issue_issue_description_label"
        android:layout_marginTop="8dp"
        app:helperTextEnabled="true"
        app:helperText="@string/add_new_issue_issue_description_helper_text"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="1000"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issue_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>