<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.view.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_page"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_email_label"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_password_label"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            style="@style/Widget.Material3.Button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            />

        <com.google.android.material.divider.MaterialDivider
            app:dividerColor="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:layout_marginTop="16dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:layout_constraintTop_toBottomOf="@id/submit_button"
            />

    </LinearLayout>

</ScrollView>