<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.view.IssuesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            >

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/issues_view_type_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_type_list"
                android:layout_weight="1"
                />

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/issues_view_type_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_type_map"
                android:layout_weight="1"
                />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_24"
        style="?attr/floatingActionButtonPrimaryStyle"
        android:contentDescription="@string/add_new_issue"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>