<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.view.AddNewIssueFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_add_new_issue_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_control_container"
        app:defaultNavHost="true"
        app:navGraph="@navigation/add_new_issue_nav_graph"
        />

    <LinearLayout
        android:id="@+id/bottom_control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <com.google.android.material.divider.MaterialDivider
            app:dividerColor="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:id="@+id/bottom_nav_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?attr/colorSurface"
            tools:visibility="gone"
            >

            <Button
                android:id="@+id/add_new_issue_button_back"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                app:icon="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/add_new_issue_button_back"
                style="@style/Widget.Material3.Button.TonalButton"
                />

            <TextView
                android:id="@+id/add_new_issue_step_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="Step 4 / 4"
                />

            <Button
                android:id="@+id/add_new_issue_button_next"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                app:icon="@drawable/baseline_arrow_forward_24"
                android:contentDescription="@string/add_new_issue_button_next"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_confirm_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="?attr/colorSurface"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"
            >

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_issue_submit_button"
                app:icon="@drawable/baseline_send_24"
                style="@style/Widget.Material3.Button.Icon"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_issue_cancel_button"
                app:icon="@drawable/baseline_arrow_back_24"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                app:layout_constraintTop_toBottomOf="@id/submit_button"
                />

            <FrameLayout
                android:id="@+id/progress_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#CCFFFFFF"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible"
                >

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>